# MediPy

./: README.md  pyproject.toml
Medipy/: IBroadcaster.py  IMediator.py  IRequest.py  IRequestHandler.py  ISender.py  Mediator.py
tests/: MediatorContext_test.py  test.py
tests/mediator/: BasicContext.py  IContext.py  TestCommand.py
