[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medipy"
version = "0.0.2"
authors = [
  { name="Christian", email="angercraft@gmail.com" },
]
description = "MediatR inspired mediator for Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChristianANoeddeboe/MediPy"
"Bug Tracker" = "https://github.com/ChristianANoeddeboe/MediPy/issues"